--- a/protoform_book/index.html
+++ b/protoform_book/index.html
@@ -272,7 +272,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="更新日志" class="section level2 hasAnchor" number="1.1">
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
-<li>2022年10月23日：<a href="成长日历.html#游戏还在继续">关服后第一周的历程</a>，更新技术资料中<a href="技术资料.html#同盟事件">同盟事件的大量数据表格</a></li>
+<li>2022年10月28日：更新<a href="成长日历.html#久违了新盟战久违了迷雾">“新”盟战与迷雾</a>。</li>
+<li>2022年10月23日：<a href="成长日历.html#游戏还在继续">关服后第一周的历程</a>，更新技术资料中<a href="技术资料.html#同盟事件">同盟事件的大量数据表格</a>。</li>
 <li>2022年10月：入坑玩到50级，得到第二个五星，探索指挥官难度，完成<a href="成长日历.html#入坑期">入坑期</a>，进入<a href="成长日历.html#成长期">成长期</a>，发布初稿。技术资料逐步更新。</li>
 </ul>
 </div>
