--- a/protoform_book/成长日历.html
+++ b/protoform_book/成长日历.html
@@ -219,6 +219,8 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.15.4" data-path="成长日历.html"><a href="成长日历.html#打通领袖难度"><i class="fa fa-check"></i><b>2.2.15.4</b> 打通领袖难度</a></li>
 </ul></li>
 <li class="chapter" data-level="2.2.16" data-path="成长日历.html"><a href="成长日历.html#久违了新盟战久违了迷雾"><i class="fa fa-check"></i><b>2.2.16</b> 久违了，新盟战，久违了，迷雾</a></li>
+<li class="chapter" data-level="2.2.17" data-path="成长日历.html"><a href="成长日历.html#暴力刷到60级"><i class="fa fa-check"></i><b>2.2.17</b> 暴力刷到60级</a></li>
+<li class="chapter" data-level="2.2.18" data-path="成长日历.html"><a href="成长日历.html#不再有新人物"><i class="fa fa-check"></i><b>2.2.18</b> 不再有新人物</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -1039,6 +1041,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <p>以目前剩下的时间，如果卡邦不疯狂发放资源，只是发发能量块的话，我能把四星主力满锻一两只就不错了，所以我决定暂停其他四星的升级，资源都给三星和两星的锻造狗粮，能养饿鲨更好。至于五星3阶，目前唯一看得到希望的就是天火，因为有了四个科技T3C。</p>
+<p>没过多久，我发现我自己在战术T3C方面突然非常富裕，于是把五星战威升到了三阶，因为四星还没开始锻造，所以战威的战力迅速成为了头像。这时我发现我犯了一个致命的错误：在人物币能买战擎的时候，我应该用三星战擎解锁四星的100级锻造后马上再买一个三星战擎回来，但我因为手气比较好完成了31任务，就忘了这回事。如果是别人，少一个三星版本倒无所谓，但是盖世擎天柱队里面最关键的反而是这只三星战擎……</p>
 </div>
 <div id="打通领袖难度" class="section level4 hasAnchor" number="2.2.15.4">
 <h4><span class="header-section-number">2.2.15.4</span> 打通领袖难度<a href="成长日历.html#打通领袖难度" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -1088,6 +1091,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </p>
 </div>
 <p>一般迷雾任务是持续一周，而卡邦也许是看到了玩家的抱怨，既然欠了这么久，不如这一次就把迷雾任务——持续78天，直到关服！</p>
+</div>
+<div id="暴力刷到60级" class="section level3 hasAnchor" number="2.2.17">
+<h3><span class="header-section-number">2.2.17</span> 暴力刷到60级<a href="成长日历.html#暴力刷到60级" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>迷雾出来了，体力本来应该是反复刷迷雾，结果我发现盖世擎天柱队靠自动战斗甚至无法打过T3迷雾！于是注意力还是回到升60级这件事。这么多能量块，先买电池把级别升满，把精通一步到位，剩下的时间专注干别的。</p>
+<p>之前我说过刷经验回报最高的是3-4-5反复进进出出，但是相当麻烦，我并没有时间这么刷。尤其是经验加成开着的时候，刷得越快越划算，所以直接反复打通一张图是更合适的。这时需要在第三幕最后几关找空节点较少的地图，于是锁定了3-4-3（低劣的忠诚），这图中路最简单的线路中有几次埋伏，平均下来两步就有一个敌人，还是很划算的。</p>
+<p>比起打一局就退，打通全图还有一个好处就是矿和宝箱的奖励不会丢失，这些矿卖掉，也会得到很可观的黄金。于是就反复买电池反复刷，到后面几级真的是很慢，10个电池也刷不了一级，但坚持下来，10个电池能换20多万的黄金（不含卖矿），很是划算了。</p>
+</div>
+<div id="不再有新人物" class="section level3 hasAnchor" number="2.2.18">
+<h3><span class="header-section-number">2.2.18</span> 不再有新人物<a href="成长日历.html#不再有新人物" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>11月3日卡邦宣布了下一轮特殊任务和展示人物，不是我们预期的5周，而是2周。也没有宣布克劳莉娅，至此我们可以基本上确定百炼为战人物表定格在了54个常规人物+7个饿鲨。</p>
 
 </div>
 </div>
