升到60级和双11大促

--- a/protoform_book/成长日历.html
+++ b/protoform_book/成长日历.html
@@ -221,6 +221,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.16" data-path="成长日历.html"><a href="成长日历.html#久违了新盟战久违了迷雾"><i class="fa fa-check"></i><b>2.2.16</b> 久违了，新盟战，久违了，迷雾</a></li>
 <li class="chapter" data-level="2.2.17" data-path="成长日历.html"><a href="成长日历.html#暴力刷到60级"><i class="fa fa-check"></i><b>2.2.17</b> 暴力刷到60级</a></li>
 <li class="chapter" data-level="2.2.18" data-path="成长日历.html"><a href="成长日历.html#不再有新人物"><i class="fa fa-check"></i><b>2.2.18</b> 不再有新人物</a></li>
+<li class="chapter" data-level="2.2.19" data-path="成长日历.html"><a href="成长日历.html#新昆塔莎的双11"><i class="fa fa-check"></i><b>2.2.19</b> 新昆塔莎的双11</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -1041,7 +1042,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <p>以目前剩下的时间，如果卡邦不疯狂发放资源，只是发发能量块的话，我能把四星主力满锻一两只就不错了，所以我决定暂停其他四星的升级，资源都给三星和两星的锻造狗粮，能养饿鲨更好。至于五星3阶，目前唯一看得到希望的就是天火，因为有了四个科技T3C。</p>
-<p>没过多久，我发现我自己在战术T3C方面突然非常富裕，于是把五星战威升到了三阶，因为四星还没开始锻造，所以战威的战力迅速成为了头像。这时我发现我犯了一个致命的错误：在人物币能买战擎的时候，我应该用三星战擎解锁四星的100级锻造后马上再买一个三星战擎回来，但我因为手气比较好完成了31任务，就忘了这回事。如果是别人，少一个三星版本倒无所谓，但是盖世擎天柱队里面最关键的反而是这只三星战擎……</p>
+<p>没过多久，我发现我自己在战术T3C方面突然非常富裕（有一次开三个T3C全是战术），于是把五星战威升到了三阶，因为其他四星还没开始锻造，所以战威的战力迅速成为了头像。这时我才发现我犯了一个致命的错误：在人物币能买战擎的时候，我应该用三星战擎解锁四星的100级锻造后马上再买一个三星战擎回来，但我因为手气比较好完成了31任务，就忘了这回事。如果是别人，少一个三星版本倒无所谓，但是盖世擎天柱队里面最关键的反而是这只三星战擎……</p>
 </div>
 <div id="打通领袖难度" class="section level4 hasAnchor" number="2.2.15.4">
 <h4><span class="header-section-number">2.2.15.4</span> 打通领袖难度<a href="成长日历.html#打通领袖难度" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -1054,7 +1055,6 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </p>
 </div>
 <p>而超能勇士活动送的野兽币也有很多，活动只过了一周，我已经攒出20000买了五星黄豹和猩猩队长。如果有时间和资源的话，突袭阵容可以往动物园转型。</p>
-<p>一次开了三个T3C全是战术，这下战威也具备五三的机会了。</p>
 <p>攒了一堆四星碎片，加上高水和精英日常欧气了两把，凑出了第四个五星（这之前还用10000超能勇士币买了五星黄豹）——热破！</p>
 </div>
 </div>
@@ -1083,7 +1083,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <p>进图看了一下，跟上一次一模一样的迷雾设计。这一年中入坑的玩家很多人还不知道什么是迷雾：这是一种全埋伏设计的方格地图，消耗大量的体力，奖励1~4阶的类别火种精华，对于老玩家来说，这里是T4C最大的产出。因为一年没有发布，所以很多玩家的五星角色升5阶与6阶非常困难。</p>
 <p>迷雾图随便往哪个方向跑都是随机遇敌，敌人中会有小Boss型的，战力高一些，奖励也高一些，跑一次下来6个类别的精华都会得到一些，而小Boss和最终Boss的掉落更多，也就决定了这一期迷雾哪个类别的产量会相对高一些（我记得第一张迷雾就是严重倾向于爆破系）。</p>
-<p>但是有玩家也会发现乱跑的话迷雾的图始终不会100%探索，总是99%的样子。如果你真的有强迫症的话，要按照左边跑五次，右边跑五次的方式，就可以全探索了</p>
+<p>但是有玩家也会发现乱跑的话迷雾的图始终不会100%探索，总是99%的样子。如果你真的有强迫症的话，要按照左边跑五次，右边跑五次的方式，就可以全探索了。</p>
 <div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-29"></span>
 <img src="02-juvenile_insertimage_17.png" alt="左边6次，右边6次，就能100%探索" width="50%" />
 <p class="caption">
@@ -1094,13 +1094,65 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="暴力刷到60级" class="section level3 hasAnchor" number="2.2.17">
 <h3><span class="header-section-number">2.2.17</span> 暴力刷到60级<a href="成长日历.html#暴力刷到60级" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>迷雾出来了，体力本来应该是反复刷迷雾，结果我发现盖世擎天柱队靠自动战斗甚至无法打过T3迷雾！于是注意力还是回到升60级这件事。这么多能量块，先买电池把级别升满，把精通一步到位，剩下的时间专注干别的。</p>
-<p>之前我说过刷经验回报最高的是3-4-5反复进进出出，但是相当麻烦，我并没有时间这么刷。尤其是经验加成开着的时候，刷得越快越划算，所以直接反复打通一张图是更合适的。这时需要在第三幕最后几关找空节点较少的地图，于是锁定了3-4-3（低劣的忠诚），这图中路最简单的线路中有几次埋伏，平均下来两步就有一个敌人，还是很划算的。</p>
-<p>比起打一局就退，打通全图还有一个好处就是矿和宝箱的奖励不会丢失，这些矿卖掉，也会得到很可观的黄金。于是就反复买电池反复刷，到后面几级真的是很慢，10个电池也刷不了一级，但坚持下来，10个电池能换20多万的黄金（不含卖矿），很是划算了。</p>
+<p>迷雾出来了，体力本来应该是反复刷迷雾，结果我发现盖世擎天柱队靠自动战斗甚至无法打过T3迷雾！于是注意力还是回到升60级这件事。这么多能量块，先买电池把级别升满，剩下的时间专注干别的。</p>
+<p>之前我说过刷经验回报最高的是3-4-5反复进进出出，但是相当麻烦，我并没有时间这么刷。尤其是经验加成开着的时候，刷得越快越划算，所以直接反复打通一张图是更合适的。我先是把第三幕全探索（得了赛天骄遗迹，这样我也终于有四个遗迹可放了），然后要在第三幕最后几关找空节点较少的地图，最终锁定了3-4-3（低劣的忠诚），这图中路最简单的线路中有几次埋伏，平均下来两步多就有一个敌人，还是很划算的。</p>
+<p>比起打一局就退，打通全图还有一个好处就是矿和宝箱的奖励不会丢失，这些矿卖掉，也会得到很可观的黄金。于是就反复买电池反复刷，到后面几级真的是很慢，10个电池也刷不了一级，但坚持下来，10个电池能换20多万的黄金（不含卖矿，卖矿大概也有同样的黄金收入，跟你有几个黄金遗迹有关），很是划算了。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-30"></span>
+<img src="02-juvenile_insertimage_18.png" alt="这要是原来，可没这么快升到60级" width="80%" />
+<p class="caption">
+图2.27: 这要是原来，可没这么快升到60级
+</p>
+</div>
+<p>这样精通也就可以一步到位了，虽然感觉还有一些值得商榷的地方，但大概率不再改了：</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-31"></span>
+<img src="02-juvenile_insertimage_19.png" alt="全攻精通设置" width="80%" />
+<p class="caption">
+图2.28: 全攻精通设置
+</p>
+</div>
 </div>
 <div id="不再有新人物" class="section level3 hasAnchor" number="2.2.18">
 <h3><span class="header-section-number">2.2.18</span> 不再有新人物<a href="成长日历.html#不再有新人物" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>11月3日卡邦宣布了下一轮特殊任务和展示人物，不是我们预期的5周，而是2周。也没有宣布克劳莉娅，至此我们可以基本上确定百炼为战人物表定格在了54个常规人物+7个饿鲨。</p>
+</div>
+<div id="新昆塔莎的双11" class="section level3 hasAnchor" number="2.2.19">
+<h3><span class="header-section-number">2.2.19</span> 新昆塔莎的双11<a href="成长日历.html#新昆塔莎的双11" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>11月4日的下午，突然有网友在群里说卡邦是不是抽风了，四星水晶100钻一个，等我上去看的时候，发现不但四星降价了，五星也变成了500钻一个，而且只剩一个小时！</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-32"></span>
+<img src="02-juvenile_insertimage_20.png" alt="大放价！" width="50%" />
+<p class="caption">
+图2.29: 大放价！
+</p>
+</div>
+<p>于是赶紧广而告之，让大家赶紧上去买。反正对我来说，升级完成了，迷雾一直到关服，所以手上这5000钻，就干脆梭哈了10个五星水晶。跟我这种成长期的号相比，更多玩家对五星已经是无感了，他们需要的是升级资源，所以他们也没有贸然去买太多的五星水晶。事实证明他们是对的——</p>
+<p>到当天晚上正式更新新一个月的日历和事件目标的时候，我们才发现卡邦做了巨大的调整：</p>
+<ul>
+<li>事件目标的奖励提高了很多，最高的奖励给四个五星和两个通用五星觉醒，100万通用币买一个五星展示人物，奖励40万通用币，相当于六折大促</li>
+<li>日历上到处都是五星人物</li>
+<li>商店里四星、五星水晶的时间从剩一小时变回了剩28天，可见后面应该是永久有效了</li>
+<li>高水、高等模块、黄金水晶等可以用钻买的水晶，基本上降价50%</li>
+<li>T2A、T3A、T3B、T4B也变成了商店中的常驻商品</li>
+</ul>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-33"></span>
+<img src="02-juvenile_insertimage_21.png" alt="五星离你越来越近，关服日期也一样"  />
+<p class="caption">
+图2.30: 五星离你越来越近，关服日期也一样
+</p>
+</div>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-34"></span>
+<img src="02-juvenile_insertimage_22.png" alt="被五星撑饱的一个月" width="70%" />
+<p class="caption">
+图2.31: 被五星撑饱的一个月
+</p>
+</div>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-35"></span>
+<img src="02-juvenile_insertimage_23.png" alt="同上" width="70%" />
+<p class="caption">
+图2.32: 同上
+</p>
+</div>
+<p>这些改动正好发生在国内双11大促时，狂欢之后却令人唏嘘，很多网友之前还对游戏抱有一点希望，看到这些也明白卡邦真的是要在走之前替大家完成各种心愿。新的一章特殊任务中也有多处台词印证了这一点。</p>
+<p>之前分手邮件送五个五星的时候，我就感觉已经失去了那种兢兢业业收集四星水晶开五星碎片的动力，现在这十几个五星一下砸过来，我就只关心能得多少彩矿了。可惜觉醒的大部分都是爆破系，爆威还觉醒了两次，惊破天一次。手上160万的通用币，正好可以买完汽车大师领40万再买一个风刃。而五星救护车入手后，我也暂停了天火的升级，转而计划把救护车升起来给战擎加一点续航，因为也许我会去打传奇1。</p>
 
 </div>
 </div>
