--- a/protoform_book/技术资料.html
+++ b/protoform_book/技术资料.html
@@ -221,6 +221,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.16" data-path="成长日历.html"><a href="成长日历.html#久违了新盟战久违了迷雾"><i class="fa fa-check"></i><b>2.2.16</b> 久违了，新盟战，久违了，迷雾</a></li>
 <li class="chapter" data-level="2.2.17" data-path="成长日历.html"><a href="成长日历.html#暴力刷到60级"><i class="fa fa-check"></i><b>2.2.17</b> 暴力刷到60级</a></li>
 <li class="chapter" data-level="2.2.18" data-path="成长日历.html"><a href="成长日历.html#不再有新人物"><i class="fa fa-check"></i><b>2.2.18</b> 不再有新人物</a></li>
+<li class="chapter" data-level="2.2.19" data-path="成长日历.html"><a href="成长日历.html#新昆塔莎的双11"><i class="fa fa-check"></i><b>2.2.19</b> 新昆塔莎的双11</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -287,13 +288,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>25级解锁塞伯坦传奇</li>
 </ul></li>
 </ul>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-30"></span>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-36"></span>
 <img src="11-techspecs_insertimage_1.png" alt="20级之前只能上三个人"  />
 <p class="caption">
 图3.1: 20级之前只能上三个人
 </p>
 </div>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-31"></span>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-37"></span>
 <img src="11-techspecs_insertimage_2.png" alt="20级解锁队长难度"  />
 <p class="caption">
 图3.2: 20级解锁队长难度
@@ -357,7 +358,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="事件目标" class="section level3 hasAnchor" number="3.2.1">
 <h3><span class="header-section-number">3.2.1</span> 事件目标<a href="技术资料.html#事件目标" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <table>
-<caption><span id="tab:unnamed-chunk-32">表3.1: </span>事件目标表（2022）</caption>
+<caption><span id="tab:unnamed-chunk-38">表3.1: </span>事件目标表（2022）</caption>
 <colgroup>
 <col width="5%" />
 <col width="47%" />
@@ -665,7 +666,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="同盟任务盟战" class="section level3 hasAnchor" number="3.4.1">
 <h3><span class="header-section-number">3.4.1</span> 同盟任务（盟战）<a href="技术资料.html#同盟任务盟战" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <table>
-<caption><span id="tab:unnamed-chunk-33">表3.2: </span>盟战里程碑奖励（黑暗地平线/灭火）</caption>
+<caption><span id="tab:unnamed-chunk-39">表3.2: </span>盟战里程碑奖励（黑暗地平线/灭火）</caption>
 <colgroup>
 <col width="15%" />
 <col width="84%" />
@@ -792,7 +793,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-34">表3.3: </span>盟战排名奖励（黑暗地平线/灭火）</caption>
+<caption><span id="tab:unnamed-chunk-40">表3.3: </span>盟战排名奖励（黑暗地平线/灭火）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -861,7 +862,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="使用类别机器人" class="section level5 hasAnchor" number="3.4.2.1.1">
 <h5><span class="header-section-number">3.4.2.1.1</span> 使用类别机器人<a href="技术资料.html#使用类别机器人" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-35">表3.4: </span>分数获取表（使用某类别机器人）</caption>
+<caption><span id="tab:unnamed-chunk-41">表3.4: </span>分数获取表（使用某类别机器人）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -936,7 +937,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-36">表3.5: </span>里程碑奖励表（使用某类别机器人）</caption>
+<caption><span id="tab:unnamed-chunk-42">表3.5: </span>里程碑奖励表（使用某类别机器人）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -970,7 +971,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="不受限制" class="section level5 hasAnchor" number="3.4.2.1.2">
 <h5><span class="header-section-number">3.4.2.1.2</span> 不受限制<a href="技术资料.html#不受限制" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-37">表3.6: </span>分数获取表（不受限制）</caption>
+<caption><span id="tab:unnamed-chunk-43">表3.6: </span>分数获取表（不受限制）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1045,7 +1046,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-38">表3.7: </span>里程碑奖励表（不受限制）</caption>
+<caption><span id="tab:unnamed-chunk-44">表3.7: </span>里程碑奖励表（不受限制）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1083,7 +1084,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="先遣队任务成功" class="section level5 hasAnchor" number="3.4.2.2.1">
 <h5><span class="header-section-number">3.4.2.2.1</span> 先遣队任务成功<a href="技术资料.html#先遣队任务成功" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-39">表3.8: </span>分数获取表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-45">表3.8: </span>分数获取表（先遣队任务成功）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1110,7 +1111,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-40">表3.9: </span>里程碑奖励表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-46">表3.9: </span>里程碑奖励表（先遣队任务成功）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1153,7 +1154,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-41">表3.10: </span>排名奖励表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-47">表3.10: </span>排名奖励表（先遣队任务成功）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1207,7 +1208,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="任务完成3日" class="section level5 hasAnchor" number="3.4.2.2.2">
 <h5><span class="header-section-number">3.4.2.2.2</span> 任务完成（3日）<a href="技术资料.html#任务完成3日" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-42">表3.11: </span>分数获取表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-48">表3.11: </span>分数获取表（任务完成（3日））</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1302,7 +1303,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-43">表3.12: </span>里程碑奖励表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-49">表3.12: </span>里程碑奖励表（任务完成（3日））</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1345,7 +1346,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-44">表3.13: </span>排名奖励表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-50">表3.13: </span>排名奖励表（任务完成（3日））</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1399,7 +1400,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="机器人升级与升阶" class="section level5 hasAnchor" number="3.4.2.2.3">
 <h5><span class="header-section-number">3.4.2.2.3</span> 机器人升级与升阶<a href="技术资料.html#机器人升级与升阶" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-45">表3.14: </span>分数获取表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-51">表3.14: </span>分数获取表（机器人升级与升阶）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1450,7 +1451,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-46">表3.15: </span>里程碑奖励表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-52">表3.15: </span>里程碑奖励表（机器人升级与升阶）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1505,7 +1506,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-47">表3.16: </span>排名奖励表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-53">表3.16: </span>排名奖励表（机器人升级与升阶）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1559,7 +1560,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="道具使用" class="section level5 hasAnchor" number="3.4.2.2.4">
 <h5><span class="header-section-number">3.4.2.2.4</span> 道具使用<a href="技术资料.html#道具使用" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-48">表3.17: </span>分数获取表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-54">表3.17: </span>分数获取表（道具使用）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1614,7 +1615,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-49">表3.18: </span>里程碑奖励表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-55">表3.18: </span>里程碑奖励表（道具使用）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1657,7 +1658,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-50">表3.19: </span>排名奖励表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-56">表3.19: </span>排名奖励表（道具使用）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1711,7 +1712,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="竞技场战斗" class="section level5 hasAnchor" number="3.4.2.2.5">
 <h5><span class="header-section-number">3.4.2.2.5</span> 竞技场战斗<a href="技术资料.html#竞技场战斗" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-51">表3.20: </span>分数获取表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-57">表3.20: </span>分数获取表（竞技场战斗）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1742,7 +1743,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-52">表3.21: </span>里程碑奖励表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-58">表3.21: </span>里程碑奖励表（竞技场战斗）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1797,7 +1798,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-53">表3.22: </span>排名奖励表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-59">表3.22: </span>排名奖励表（竞技场战斗）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1855,7 +1856,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="特殊任务完成" class="section level5 hasAnchor" number="3.4.2.3.1">
 <h5><span class="header-section-number">3.4.2.3.1</span> 特殊任务完成<a href="技术资料.html#特殊任务完成" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-54">表3.23: </span>分数获取表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-60">表3.23: </span>分数获取表（特殊任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1882,7 +1883,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-55">表3.24: </span>里程碑奖励表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-61">表3.24: </span>里程碑奖励表（特殊任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1929,7 +1930,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-56">表3.25: </span>排名奖励表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-62">表3.25: </span>排名奖励表（特殊任务完成）</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -1983,7 +1984,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="机器人战斗1" class="section level5 hasAnchor" number="3.4.2.3.2">
 <h5><span class="header-section-number">3.4.2.3.2</span> 机器人战斗（1）<a href="技术资料.html#机器人战斗1" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-57">表3.26: </span>分数获取表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-63">表3.26: </span>分数获取表（机器人战斗（1））</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -2054,7 +2055,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-58">表3.27: </span>里程碑奖励表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-64">表3.27: </span>里程碑奖励表（机器人战斗（1））</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -2105,7 +2106,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-59">表3.28: </span>排名奖励表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-65">表3.28: </span>排名奖励表（机器人战斗（1））</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -2159,7 +2160,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="突袭升华战" class="section level5 hasAnchor" number="3.4.2.3.3">
 <h5><span class="header-section-number">3.4.2.3.3</span> 突袭升华战<a href="技术资料.html#突袭升华战" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-60">表3.29: </span>分数获取表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-66">表3.29: </span>分数获取表（突袭升华战）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -2214,7 +2215,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-61">表3.30: </span>里程碑奖励表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-67">表3.30: </span>里程碑奖励表（突袭升华战）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -2261,7 +2262,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-62">表3.31: </span>排名奖励表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-68">表3.31: </span>排名奖励表（突袭升华战）</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -2319,7 +2320,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="任意任务完成" class="section level5 hasAnchor" number="3.4.2.3.5">
 <h5><span class="header-section-number">3.4.2.3.5</span> 任意任务完成<a href="技术资料.html#任意任务完成" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-63">表3.32: </span>分数获取表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-69">表3.32: </span>分数获取表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
@@ -2329,7 +2330,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-64">表3.33: </span>里程碑奖励表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-70">表3.33: </span>里程碑奖励表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
@@ -2339,7 +2340,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-65">表3.34: </span>排名奖励表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-71">表3.34: </span>排名奖励表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
