探索领袖难度

--- a/protoform_book/404.html
+++ b/protoform_book/404.html
@@ -222,6 +222,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.17" data-path="成长日历.html"><a href="成长日历.html#暴力刷到60级"><i class="fa fa-check"></i><b>2.2.17</b> 暴力刷到60级</a></li>
 <li class="chapter" data-level="2.2.18" data-path="成长日历.html"><a href="成长日历.html#不再有新人物"><i class="fa fa-check"></i><b>2.2.18</b> 不再有新人物</a></li>
 <li class="chapter" data-level="2.2.19" data-path="成长日历.html"><a href="成长日历.html#新昆塔莎的双11"><i class="fa fa-check"></i><b>2.2.19</b> 新昆塔莎的双11</a></li>
+<li class="chapter" data-level="2.2.20" data-path="成长日历.html"><a href="成长日历.html#探索领袖难度"><i class="fa fa-check"></i><b>2.2.20</b> 探索领袖难度</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
