--- a/protoform_book/成长日历.html
+++ b/protoform_book/成长日历.html
@@ -222,6 +222,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.17" data-path="成长日历.html"><a href="成长日历.html#暴力刷到60级"><i class="fa fa-check"></i><b>2.2.17</b> 暴力刷到60级</a></li>
 <li class="chapter" data-level="2.2.18" data-path="成长日历.html"><a href="成长日历.html#不再有新人物"><i class="fa fa-check"></i><b>2.2.18</b> 不再有新人物</a></li>
 <li class="chapter" data-level="2.2.19" data-path="成长日历.html"><a href="成长日历.html#新昆塔莎的双11"><i class="fa fa-check"></i><b>2.2.19</b> 新昆塔莎的双11</a></li>
+<li class="chapter" data-level="2.2.20" data-path="成长日历.html"><a href="成长日历.html#探索领袖难度"><i class="fa fa-check"></i><b>2.2.20</b> 探索领袖难度</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -487,7 +488,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="再问技术怎么提升" class="section level3 hasAnchor" number="2.1.5">
 <h3><span class="header-section-number">2.1.5</span> 再问技术怎么提升<a href="成长日历.html#再问技术怎么提升" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>没错，这里跟前面章节并不重复，因为我假设你已经玩了一小段时间了，“多玩就懂了”，可是还是想知道怎样的技术算可以的，如果不可以，又该怎么办。</p>
-<p>新人可以从以下几个点来判断自己的技术（这里只讲技术，基于的假设是你对人物的性能是了解的，你用风刃去打碎骨魔打不过，不算技术问题）：</p>
+<p>新人可以从以下几个点来判断自己的技术（这里只讲技术，基于的假设是你对人物的性能是了解的，你用风刃去打碎骨魔打不过，不算技术问题<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>）：</p>
 <ul>
 <li>如果在竞技场跟战力相同的敌人打，是不是基本上能打完美，最多被坑一次——如果做不到，那先要努力做到这一点，因为同战力的战斗是很短的。</li>
 <li>面对3倍于自己战力的竞技场敌人，是不是也基本上能赢——下一个目标就是这样的长战斗，要提高自己的心理素质，开始学习骗招和走位。</li>
@@ -514,7 +515,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 图2.6: 32级时的阵容初步出现了一些四星
 </p>
 </div>
-<p>另外要注意日常任务在左右都探索过后是可以自动完成的<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>，但是自动完成得到的火种精华奖励比手动刷图要少将近一半，所以建议有时间还是先探索，再反复手动刷难度高的那条线。</p>
+<p>另外要注意日常任务在左右都探索过后是可以自动完成的<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>，但是自动完成得到的火种精华奖励比手动刷图要少将近一半，所以建议有时间还是先探索，再反复手动刷难度高的那条线。</p>
 </div>
 <div id="入坑期的突袭" class="section level3 hasAnchor" number="2.1.8">
 <h3><span class="header-section-number">2.1.8</span> 入坑期的突袭<a href="成长日历.html#入坑期的突袭" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -663,7 +664,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="水晶开开开" class="section level3 hasAnchor" number="2.1.13">
 <h3><span class="header-section-number">2.1.13</span> 水晶开开开<a href="成长日历.html#水晶开开开" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>我的运气还可以，在31级的时候高水出了四星汽车大师和滑流，精英机器人水晶出了四星雷震，于是就没再用能量块抽卡，游戏中处处掉落的那些人物水晶，碎片水晶，我见到就开。这个期间水晶没必要攒<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>，因为游戏每开到20个二星就能得一个三星，三星到四星，四星到五星也同理，所以我开始以为第一个四星要等40级那个成就送的水晶，现在看来太保守，实际比这个会早很多。32级的时候我就凑齐第一个四星碎片水晶开出了黄豹。</p>
+<p>我的运气还可以，在31级的时候高水出了四星汽车大师和滑流，精英机器人水晶出了四星雷震，于是就没再用能量块抽卡，游戏中处处掉落的那些人物水晶，碎片水晶，我见到就开。这个期间水晶没必要攒<a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a>，因为游戏每开到20个二星就能得一个三星，三星到四星，四星到五星也同理，所以我开始以为第一个四星要等40级那个成就送的水晶，现在看来太保守，实际比这个会早很多。32级的时候我就凑齐第一个四星碎片水晶开出了黄豹。</p>
 </div>
 <div id="入手第一个四星后" class="section level3 hasAnchor" number="2.1.14">
 <h3><span class="header-section-number">2.1.14</span> 入手第一个四星后<a href="成长日历.html#入手第一个四星后" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -910,7 +911,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="与你的同盟共同成长" class="section level3 hasAnchor" number="2.2.11">
 <h3><span class="header-section-number">2.2.11</span> 与你的同盟共同成长<a href="成长日历.html#与你的同盟共同成长" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>之前在<a href="成长日历.html#入坑期">入坑期</a>一节最早我已经提到，因为各种因素不同，每个玩家拿到的资源也是不同的，这其中最大的变数应该不是手气，而是同盟。相信很多玩家跟我之前一样，也只是加了一个盟，打打盟战，其余时候不见得与盟友有多少交流，因为这游戏大部分时间就是各玩各的。而卡邦则是通过同盟事件的设计巧妙地把大家串在了一起，让所有人的努力回馈到所有人头上，反映到现实中就是每天都能领的一堆奖励。很多人也并不清楚这些奖励具体是怎么得到的，闭着眼睛领就是了，但其实很多重要的资源是来自于同盟事件和同盟任务。</p>
-<p>我想说的是，到了成长期，同盟的选择要看自身的能力<a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a>和缘份，我不可能指导或者要求你去找一个怎样怎样的同盟来跟着教程走，而是会介绍参与同盟能产出哪些资源，这样就能明白为什么别人发展得快。</p>
+<p>我想说的是，到了成长期，同盟的选择要看自身的能力<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a>和缘份，我不可能指导或者要求你去找一个怎样怎样的同盟来跟着教程走，而是会介绍参与同盟能产出哪些资源，这样就能明白为什么别人发展得快。</p>
 <div id="成长期的同盟事件" class="section level4 hasAnchor" number="2.2.11.1">
 <h4><span class="header-section-number">2.2.11.1</span> 成长期的同盟事件<a href="成长日历.html#成长期的同盟事件" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 </div>
@@ -1153,6 +1154,36 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <p>这些改动正好发生在国内双11大促时，狂欢之后却令人唏嘘，很多网友之前还对游戏抱有一点希望，看到这些也明白卡邦真的是要在走之前替大家完成各种心愿。新的一章特殊任务中也有多处台词印证了这一点。</p>
 <p>之前分手邮件送五个五星的时候，我就感觉已经失去了那种兢兢业业收集四星水晶开五星碎片的动力，现在这十几个五星一下砸过来，我就只关心能得多少彩矿了。可惜觉醒的大部分都是爆破系，爆威还觉醒了两次，惊破天一次。手上160万的通用币，正好可以买完汽车大师领40万再买一个风刃。而五星救护车入手后，我也暂停了天火的升级，转而计划把救护车升起来给战擎加一点续航，因为也许我会去打传奇1。</p>
+</div>
+<div id="探索领袖难度" class="section level3 hasAnchor" number="2.2.20">
+<h3><span class="header-section-number">2.2.20</span> 探索领袖难度<a href="成长日历.html#探索领袖难度" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>资源的放开让我的五星人物升级速度大大加快，四星的锻造先放一边。我把救护车和战威都升到了四阶，不过因为矿和黄金不够，还没升到四阶满，但已经飞机场可以刷出五星碎片任务了。</p>
+<p>升救护车的主要原因是希望借助他的磨血和给战擎的回血去探索领袖难度。于是要采用缩水版的盖世擎天柱协同队，即用五星战威和五星救护车换掉二星战擎和二星警车。这样开局的气没了，但是四星战擎还是能得到攻血的提升。</p>
+<p>实际打了才发现，战威在这个阶段优势不明显，救护车长战斗磨血打了八九十下一个失误又得杀后台重来。战擎没了迅速永久破甲的能力也就沦为一个战力5000多的攻击点。总之，领袖难度的前两章，两种阵形都试过，还是顺利打下来了。</p>
+<p>第三章是个不小的挑战。先看关底，这个千斤顶很多人不会打，主要是有回血，形成了<strong>纳米千</strong>的效果，而且回血的速度还比较快，盾的时间也很长。于是黄豹成了最优解，我在指挥官难度中试了一下黄豹，依然是把千斤顶按在地上摩擦。但是到了领袖难度，我一只3500的黄豹去打20000多的千斤顶就不是那么舒服了。有战擎的破甲流血应该够！因为这个千斤顶虽然还有物理、能量抗性和格挡熟练度，但真正bug的就是回血，只要用流血输出压过盾点，接下来就是继续疯狂输出保证他即使回血，也不能爬到上一个盾点。</p>
+<p>把四星战擎锻造到75级，招牌升到60，通过最简单线的试水，关底解决了，还有其他几条线。凭一只战擎打下了其中的三条线（无模块，物理抗性计时，格挡熟练度）。但是剩下两条线，一条是回血线，由于路线上有通天晓、小黄蜂这些不确定性很大的，我还是改了阵容，用五星救护车换掉了一个二星警车（战威不上），这样主要是在战斗中能博一下回血，如果运气不好，杀后台重来还有盼头。这样的效果还可以，不过依然是重新打了很多次才打过。最后一条线的能量抗性对战擎几乎形成不了威胁，但有一个碎骨魔。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-36"></span>
+<img src="02-juvenile_insertimage_24.png" alt="遥看碎骨挂前川"  />
+<p class="caption">
+图2.33: 遥看碎骨挂前川
+</p>
+</div>
+<p>于是只有再下一个二星战擎，换上3500战力的惊天雷，追求一次过碎骨魔。最终惊天雷顺利完成了任务，也使得领袖难度告破。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-37"></span>
+<img src="02-juvenile_insertimage_25.png" alt="惊天雷打碎骨魔真是轻松"  />
+<p class="caption">
+图2.34: 惊天雷打碎骨魔真是轻松
+</p>
+</div>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-38"></span>
+<img src="02-juvenile_insertimage_26.png" alt="领袖难度完成" width="70%" />
+<p class="caption">
+图2.35: 领袖难度完成
+</p>
+</div>
+<p>入手星辰剑的同时通过事件目标拿到了N多个五星水晶，这次开9个五星也是收获颇丰：一次性开到了汽车大师、风刃、路障这三个展示人物（此前通天晓已经开到），并且入手了战擎、爆破铁皮和警车，闹翻天也作为吉祥物被开了出来。</p>
+<p>考虑到五星通用觉醒程序的目标已经不远，不想再等其他目标的完成，直接买了三个四星展示人物冲到34目标，拿到两个通用觉醒程序和4个五星，准备等开完五星后，如果战擎和黄豹没有觉醒，就用觉醒程序觉醒他们。</p>
+<p>有了五星战擎之后，可以使用2/3/4/5战擎加五星警车的豪华盖世队来打了，因为五星战擎慢慢升上来之后，就算觉醒等级一时上不去，也可以成为四星战擎很好的补充。现在四星战擎卡在75锻造舍不得吃三星战擎，虽然游戏没多久活头了，但我依然是按照正常的玩法来解决这个问题：1、先把三星狗粮养足，毕竟后面25级对狗粮的消耗巨大，同时还可能要锻造四星惊天雷；2、准备好足够的三星水晶先不开，争取在吃掉三星战擎之后有运气马上开回来。</p>
 
 </div>
 </div>
@@ -1160,9 +1191,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div class="footnotes">
 <hr />
 <ol start="2">
-<li id="fn2"><p>可惜卡邦试水了这个模式的自动完成后，没有一鼓作气把特殊任务的低难度也加上自动完成的功能<a href="成长日历.html#fnref2" class="footnote-back">↩︎</a></p></li>
-<li id="fn3"><p>曾经还有“水晶开启”这个事件，貌似也被卡邦淡忘了，所以更没必要攒<a href="成长日历.html#fnref3" class="footnote-back">↩︎</a></p></li>
-<li id="fn4"><p>是的，我早就可以凭自己在游戏中的人脉去一个远超出自己最高战力的同盟蹭奖励，但是我一直控制着自己不要这样做，以免在入坑期就发展如飞造成很大的误导，但到了成长期我觉得我不需要再这样<a href="成长日历.html#fnref4" class="footnote-back">↩︎</a></p></li>
+<li id="fn2"><p>官方仿佛听到了我的声音，在2022年11月的展示任务中安排了风刃打碎骨魔……<a href="成长日历.html#fnref2" class="footnote-back">↩︎</a></p></li>
+<li id="fn3"><p>可惜卡邦试水了这个模式的自动完成后，没有一鼓作气把特殊任务的低难度也加上自动完成的功能<a href="成长日历.html#fnref3" class="footnote-back">↩︎</a></p></li>
+<li id="fn4"><p>曾经还有“水晶开启”这个事件，貌似也被卡邦淡忘了，所以更没必要攒<a href="成长日历.html#fnref4" class="footnote-back">↩︎</a></p></li>
+<li id="fn5"><p>是的，我早就可以凭自己在游戏中的人脉去一个远超出自己最高战力的同盟蹭奖励，但是我一直控制着自己不要这样做，以免在入坑期就发展如飞造成很大的误导，但到了成长期我觉得我不需要再这样<a href="成长日历.html#fnref5" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
