--- a/protoform_book/index.html
+++ b/protoform_book/index.html
@@ -222,6 +222,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.17" data-path="成长日历.html"><a href="成长日历.html#暴力刷到60级"><i class="fa fa-check"></i><b>2.2.17</b> 暴力刷到60级</a></li>
 <li class="chapter" data-level="2.2.18" data-path="成长日历.html"><a href="成长日历.html#不再有新人物"><i class="fa fa-check"></i><b>2.2.18</b> 不再有新人物</a></li>
 <li class="chapter" data-level="2.2.19" data-path="成长日历.html"><a href="成长日历.html#新昆塔莎的双11"><i class="fa fa-check"></i><b>2.2.19</b> 新昆塔莎的双11</a></li>
+<li class="chapter" data-level="2.2.20" data-path="成长日历.html"><a href="成长日历.html#探索领袖难度"><i class="fa fa-check"></i><b>2.2.20</b> 探索领袖难度</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -268,13 +269,14 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">百炼为战：原生体成长记</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-11-05</em></p>
+<p class="date"><em>更新时间：2022-11-14</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <div id="更新日志" class="section level2 hasAnchor" number="1.1">
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
+<li>2022年11月14日：<a href="成长日历.html#探索领袖难度">探索领袖难度</a>。</li>
 <li>2022年11月5日：卡邦慷慨地发布了<a href="成长日历.html#新昆塔莎的双11">一系列的降价</a>。</li>
 <li>2022年11月3日：<a href="成长日历.html#不再有新人物">新一轮特殊任务</a>发布，没有克劳莉娅。</li>
 <li>2022年10月28日：更新<a href="成长日历.html#久违了新盟战久违了迷雾">“新”盟战与迷雾</a>。</li>
