大逃亡协议：百炼为战最终章
顺便更新了锻造中某个失传的技术（的传言）

--- a/protoform_book/404.html
+++ b/protoform_book/404.html
@@ -223,7 +223,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.18" data-path="成长日历.html"><a href="成长日历.html#不再有新人物"><i class="fa fa-check"></i><b>2.2.18</b> 不再有新人物</a></li>
 <li class="chapter" data-level="2.2.19" data-path="成长日历.html"><a href="成长日历.html#新昆塔莎的双11"><i class="fa fa-check"></i><b>2.2.19</b> 新昆塔莎的双11</a></li>
 <li class="chapter" data-level="2.2.20" data-path="成长日历.html"><a href="成长日历.html#探索领袖难度"><i class="fa fa-check"></i><b>2.2.20</b> 探索领袖难度</a></li>
+<li class="chapter" data-level="2.2.21" data-path="成长日历.html"><a href="成长日历.html#大逃亡协议"><i class="fa fa-check"></i><b>2.2.21</b> 大逃亡协议</a>
+<ul>
+<li class="chapter" data-level="2.2.21.1" data-path="成长日历.html"><a href="成长日历.html#通用币废了但泰坦币大放送"><i class="fa fa-check"></i><b>2.2.21.1</b> 通用币废了，但泰坦币大放送</a></li>
+<li class="chapter" data-level="2.2.21.2" data-path="成长日历.html"><a href="成长日历.html#长命的百炼"><i class="fa fa-check"></i><b>2.2.21.2</b> “长命”的百炼</a></li>
 </ul></li>
+<li class="chapter" data-level="2.2.22" data-path="成长日历.html"><a href="成长日历.html#第一个也是最后一个六阶"><i class="fa fa-check"></i><b>2.2.22</b> 第一个也是最后一个六阶</a></li>
+</ul></li>
+<li class="chapter" data-level="2.3" data-path="成长日历.html"><a href="成长日历.html#成熟期"><i class="fa fa-check"></i><b>2.3</b> 成熟期</a></li>
+<li class="chapter" data-level="2.4" data-path="成长日历.html"><a href="成长日历.html#四星五星人物获取记录"><i class="fa fa-check"></i><b>2.4</b> 四星/五星人物获取记录</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
 <ul>
