--- a/protoform_book/index.html
+++ b/protoform_book/index.html
@@ -223,7 +223,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="2.2.18" data-path="成长日历.html"><a href="成长日历.html#不再有新人物"><i class="fa fa-check"></i><b>2.2.18</b> 不再有新人物</a></li>
 <li class="chapter" data-level="2.2.19" data-path="成长日历.html"><a href="成长日历.html#新昆塔莎的双11"><i class="fa fa-check"></i><b>2.2.19</b> 新昆塔莎的双11</a></li>
 <li class="chapter" data-level="2.2.20" data-path="成长日历.html"><a href="成长日历.html#探索领袖难度"><i class="fa fa-check"></i><b>2.2.20</b> 探索领袖难度</a></li>
+<li class="chapter" data-level="2.2.21" data-path="成长日历.html"><a href="成长日历.html#大逃亡协议"><i class="fa fa-check"></i><b>2.2.21</b> 大逃亡协议</a>
+<ul>
+<li class="chapter" data-level="2.2.21.1" data-path="成长日历.html"><a href="成长日历.html#通用币废了但泰坦币大放送"><i class="fa fa-check"></i><b>2.2.21.1</b> 通用币废了，但泰坦币大放送</a></li>
+<li class="chapter" data-level="2.2.21.2" data-path="成长日历.html"><a href="成长日历.html#长命的百炼"><i class="fa fa-check"></i><b>2.2.21.2</b> “长命”的百炼</a></li>
 </ul></li>
+<li class="chapter" data-level="2.2.22" data-path="成长日历.html"><a href="成长日历.html#第一个也是最后一个六阶"><i class="fa fa-check"></i><b>2.2.22</b> 第一个也是最后一个六阶</a></li>
+</ul></li>
+<li class="chapter" data-level="2.3" data-path="成长日历.html"><a href="成长日历.html#成熟期"><i class="fa fa-check"></i><b>2.3</b> 成熟期</a></li>
+<li class="chapter" data-level="2.4" data-path="成长日历.html"><a href="成长日历.html#四星五星人物获取记录"><i class="fa fa-check"></i><b>2.4</b> 四星/五星人物获取记录</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
 <ul>
@@ -269,13 +277,15 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">百炼为战：原生体成长记</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-11-14</em></p>
+<p class="date"><em>更新时间：2022-12-29</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <div id="更新日志" class="section level2 hasAnchor" number="1.1">
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
+<li>2022年12月29日：<a href="成长日历.html#四星五星人物获取记录">人物获取记录表</a>。</li>
+<li>2022年12月14日：<a href="成长日历.html#大逃亡协议">大逃亡协议</a>，百炼为战最终章。</li>
 <li>2022年11月14日：<a href="成长日历.html#探索领袖难度">探索领袖难度</a>。</li>
 <li>2022年11月5日：卡邦慷慨地发布了<a href="成长日历.html#新昆塔莎的双11">一系列的降价</a>。</li>
 <li>2022年11月3日：<a href="成长日历.html#不再有新人物">新一轮特殊任务</a>发布，没有克劳莉娅。</li>
@@ -290,7 +300,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>本文是一篇写作于2022年，基于写作时刻的游戏现状，站在新入坑玩家的角度的新手教程<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>。游戏从上线到现在已经5年多了，老玩家一天天在流失，新人越来越少。我给这个游戏写了很多教程，但都是针对成长型玩家的，很多新人表示看不太明白。终于还是下决心再从零出发，希望这篇初级教程能够吸引更多玩家加入或者回到这个游戏来。</p>
 <p>由于游戏是不断更新的，一些有时效性的内容已经尽量标注出来，但在你读到本文时，可能一些内容或参数没有及时更新或删除，以游戏中提供的为准。</p>
 <p>本文将以“<a href="成长日历.html#成长日历">成长日历</a>”和“<a href="技术资料.html#技术资料">技术资料</a>”两个方向来写作。成长日历是从玩家游戏时间的角度出发，还原游戏一天天玩（gān）下去的过程中，每阶段要关注的点、要收集的资源、可借鉴的技巧和要避免的坑。技术资料则是各个模式的介绍，补充官方在这方面引导的不足，方便有针对性的查阅。</p>
-<p>（<em>后面还会有一篇[对症下药]，针对一些FAQ指引玩家上哪里打资源。先预告一下。</em>）</p>
+<!-- （*后面还会有一篇[对症下药]，针对一些FAQ指引玩家上哪里打资源。先预告一下。*） -->
 <p>作者比较老派，手机上没有抖音和B站，也不太会用视频去解说。虽然我也承认视频讲解会更快搞懂，但我还是更愿意打字。为了节约大家时间，当我感觉到我罗嗦太多，一般会在段落结尾加一个【小结】，把重点汇总到一起。</p>
 </div>
 <div id="游戏标签" class="section level2 hasAnchor" number="1.3">
